--- a/index.html
+++ b/index.html
@@ -234,23 +234,24 @@ nav.scrolled {
 }
 .btn-outline:hover { border-color: var(--gold); color: var(--gold); }
 
-/* Hero side stats */
-.hero-side {
-  position: absolute; right: 50px; top: 50%; transform: translateY(-50%);
-  z-index: 2; display: flex; flex-direction: column; gap: 50px;
+/* Hero counters inline */
+.hero-counters {
+  display: flex; align-items: center; gap: 28px;
+  margin-top: 48px; padding-top: 32px; border-top: 1px solid rgba(255,255,255,0.08);
   opacity: 0; animation: fadeIn 1s ease 3.6s forwards;
 }
-
-.hero-stat { text-align: center; }
-.hero-stat-n {
+.hero-counter { display: flex; align-items: baseline; gap: 10px; }
+.hero-counter-n {
   font-family: 'Playfair Display', serif;
-  font-size: 52px; font-weight: 400; color: var(--gold); line-height: 1;
+  font-size: 28px; font-weight: 400; color: var(--gold);
 }
-.hero-stat-l {
-  font-size: 10px; font-weight: 400; letter-spacing: 0.25em;
-  text-transform: uppercase; color: var(--text3); margin-top: 8px;
+.hero-counter-l {
+  font-size: 12px; font-weight: 400; color: var(--text2);
+  letter-spacing: 0.05em;
 }
-.hero-stat-bar { width: 1px; height: 50px; background: var(--border); margin: 0 auto; }
+.hero-counter-sep {
+  width: 1px; height: 28px; background: rgba(255,255,255,0.1);
+}
 
 /* ===== SECTIONS ===== */
 section { padding: 120px 50px; position: relative; }
@@ -546,6 +547,7 @@ footer {
   .services-wrap { grid-template-columns: repeat(2, 1fr); }
   .proc-grid { grid-template-columns: repeat(2, 1fr); }
   .hero-side { display: none; }
+  .hero-counters { gap: 20px; flex-wrap: wrap; }
   .ind-works { grid-template-columns: repeat(2, 1fr); }
   .why-grid { grid-template-columns: 1fr; }
   .why-img { height: 320px; }
@@ -568,6 +570,8 @@ footer {
   .showcase-grid { grid-template-columns: 1fr; }
   .showcase-item { height: 240px; }
   .hero-btns { flex-direction: column; }
+  .hero-counters { flex-direction: column; gap: 16px; align-items: flex-start; }
+  .hero-counter-sep { width: 40px; height: 1px; }
   footer { flex-direction: column; gap: 14px; text-align: center; }
   .cta { padding: 70px 20px; }
   .social-row { flex-direction: column; }
@@ -639,17 +643,22 @@ footer {
       <a href="#contacts" class="btn-gold">Обсудить проект →</a>
       <a href="#services" class="btn-outline">Все услуги</a>
     </div>
-  </div>
 
-  <div class="hero-side">
-    <div class="hero-stat">
-      <div class="hero-stat-n">100%</div>
-      <div class="hero-stat-l">Работа под ключ</div>
-    </div>
-    <div class="hero-stat-bar"></div>
-    <div class="hero-stat">
-      <div class="hero-stat-n">∞</div>
-      <div class="hero-stat-l">Внимание к деталям</div>
+    <div class="hero-counters">
+      <div class="hero-counter">
+        <span class="hero-counter-n">100%</span>
+        <span class="hero-counter-l">Под ключ</span>
+      </div>
+      <div class="hero-counter-sep"></div>
+      <div class="hero-counter">
+        <span class="hero-counter-n">24/7</span>
+        <span class="hero-counter-l">На связи</span>
+      </div>
+      <div class="hero-counter-sep"></div>
+      <div class="hero-counter">
+        <span class="hero-counter-n">0 ₸</span>
+        <span class="hero-counter-l">Замер и консультация</span>
+      </div>
     </div>
   </div>
 </section>
